# Orientiation-Mali

./: .gitignore  .samignore  deploy.ps1  pyproject.toml  requirements.txt  samconfig.toml  template-cf.yaml  template.yaml
.aws-sam/: build.toml
.build/package/: handler.py
.build/package/boto3-1.43.3.dist-info/: RECORD
.build/package/botocore-1.43.3.dist-info/: RECORD
.build/package/charset_normalizer-3.4.7.dist-info/: RECORD
.build/package/fastapi-0.136.1.dist-info/: RECORD
.build/package/httpx-0.28.1.dist-info/: RECORD
.build/package/jmespath-1.1.0.dist-info/: RECORD
.build/package/jsonschema-4.26.0.dist-info/: RECORD
.build/package/mcp-1.10.1.dist-info/: RECORD
.build/package/opentelemetry_instrumentation-0.62b1.dist-info/: RECORD
.build/package/python_dotenv-1.2.2.dist-info/: RECORD
.build/package/strands-agents-bedrock/: __init__.py  main.py
.build/package/strands_agents-1.1.0.dist-info/: RECORD
.build/package/strands_agents_bedrock-0.0.1.dist-info/: METADATA  RECORD  top_level.txt
.build/package/uvicorn-0.46.0.dist-info/: RECORD
.build/package/watchdog-6.0.0.dist-info/: RECORD
.kiro/hooks/: git-commit-changes.kiro.hook  git-hook.kiro.hook
.kiro/specs/custom-domain-deployment/: .config.kiro  design.md  tasks.md  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
src/orientation_mali/: store.py
tests/integration/: test_pipeline.py
tests/property/: test_parsing_properties.py  test_rendering_properties.py  test_validation_properties.py
tests/unit/: test_orchestrator.py  test_profile_parsing.py  test_recommendation_parsing.py
(+22 files in other folders)
